corrected font behavior on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,4 +19,14 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: var(--font-lexend);
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
+}
+
+@media (max-width: 768px) {
+  body {
+    font-size: 16px;
+    line-height: 1.5;
+  }
 }
